syntax = "proto3";
import "google/protobuf/wrappers.proto";
option csharp_namespace = "Catalog.API.ProtoService";

service GrpcCatalogProductProvider {
	rpc GrpcGetAllProducts(GrpcEmptyRequest) returns (GrpcCatalogProductDetailedList);
	rpc GrpcGetProductByBrandId(GrpcIdRequest) returns (GrpcCatalogProductDetailedList);
	rpc GrpcGetProductByCatalogTypeId(GrpcIdRequest) returns (GrpcCatalogProductDetailedList);
	rpc GrpcGetProductById(GrpcIdRequest) returns (GrpcCatalogProductDetailed);
	rpc GrpcAddProduct(GrpcCatalogProductToCreate) returns(GrpcBool);
	rpc GrpcUpdateProduct(GrpcCatalogProductToUpdate) returns(GrpcBool);
	rpc GrpcDeleteProduct(GrpcIdRequest) returns(GrpcBool);
}

message GrpcEmptyRequest{}
message GrpcIdRequest {
	int64 id = 1;
}

message GrpcBool {
	bool response = 1;
}

message GrpcCatalogProductDetailed {
	int32 id = 1;
	google.protobuf.StringValue name = 2;
	google.protobuf.StringValue description = 3;
	google.protobuf.DoubleValue price = 4;
	double mrp = 5;
	int32 catalogTypeId = 6;
	google.protobuf.StringValue CatalogType = 7;

	int32 CatalogBrandId = 8;
	google.protobuf.StringValue CatalogBrand = 9;
	int32 AvailableStock = 10;
	int32 RestockThreshold = 11;
	int32 MaxStockThreshold = 12;
	int32 ImageId = 13;
	google.protobuf.StringValue ImageName = 14;
	google.protobuf.StringValue ImageCaption = 15;
	google.protobuf.StringValue ImageData = 16;
}

message GrpcCatalogProductDetailedList {
	repeated GrpcCatalogProductDetailed products = 1;
}

message GrpcCatalogProductToCreate {
	int32 id = 1;
	google.protobuf.StringValue name = 2;
	google.protobuf.StringValue description = 3;
	google.protobuf.DoubleValue price = 4;
	double mrp = 5;
	int32 catalogTypeId = 6;

	int32 CatalogBrandId = 7;
	int32 AvailableStock = 8;
	int32 RestockThreshold = 9;
	int32 MaxStockThreshold = 10;
	int32 ImageId = 11;
	google.protobuf.StringValue ImageName = 12;
	google.protobuf.StringValue ImageCaption = 13;
	google.protobuf.StringValue ImageData = 14;
}

message GrpcCatalogProductToUpdate {
	int32 id = 1;
	google.protobuf.StringValue name = 2;
	google.protobuf.StringValue description = 3;
	google.protobuf.DoubleValue price = 4;
	double mrp = 5;
	int32 catalogTypeId = 6;

	int32 CatalogBrandId = 7;
	int32 AvailableStock = 8;
	int32 RestockThreshold = 9;
	int32 MaxStockThreshold = 10;
	int32 ImageId = 11;
	google.protobuf.StringValue ImageName = 12;
	google.protobuf.StringValue ImageCaption = 13;
	google.protobuf.StringValue ImageData = 14;
}
